z-index bugfix

--- a/css/property-fees/_property-fees-markup.scss
+++ b/css/property-fees/_property-fees-markup.scss
@@ -117,7 +117,7 @@ table.property-fees-table {
 	gap: 0.35rem;
 	cursor: help;
 	position: relative;
-	z-index: 20;
+	z-index: 5;
 	vertical-align: middle;
 
 	// Info icon (question mark with circle)
